fixed collapse navbar

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -48,3 +48,15 @@ body {
   width: 300px;
   height: 300px;
 }
+
+@media screen and (max-width: 767px) {
+  .navbar-collapse {
+    background-color: whitesmoke;
+    z-index: 1;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 400px;
+    justify-content: end;
+    margin-left: auto;
+  }
+}
